# voice_transcription_and_translation

./: .env.example  .gitignore  CHANGES_SUMMARY.md  DEPLOY.md  Dockerfile  OPTIMIZATION_README.md  QUICK_START.md  README.md  SETUP_GUIDE.md  diagnose_audio.py  docker-compose.prod.yml  docker-compose.yml  install_dependencies.sh  production_config.py  pyproject.toml  requirements.txt  run_local.py  test_streaming.py  test_websocket_streaming.py
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  deployment.yml  docker-publish.yml  monitoring.yml  pr-checks.yml
voice_translation/: __init__.py
voice_translation/api/: __main__.py  main.py  security.py
voice_translation/client/: __main__.py  gui.py
voice_translation/core/: audio.py  audio_utils.py  error_trace.py  logging_config.py  processor.py
voice_translation/server/: __main__.py  websocket_server.py
voice_translation/static/: index.html
voice_translation/tests/: test_fixes.py  test_logging.py
