[project]
name = "voice-translation-system"
version = "0.1.0"
description = "Real-time multi-speaker voice translation and transcription system"
authors = [{name = "Muhammad", email = "muhammad@example.com"}]
requires-python = ">=3.9,<3.13"
dependencies = [
    "openai-whisper",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pyaudio>=0.2.11",
    "websockets>=11.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "python-dotenv>=1.0.0",
    "pyannote-audio>=3.4.0",
    "sentencepiece>=0.1.99",
    "autoflake>=2.3.1",
    "black>=25.9.0",
    "isort>=6.1.0",
    "sacremoses>=0.1.1",
]

[project.scripts]
voice-server = "voice_translation.server.__main__:main"
voice-client = "voice_translation.client.__main__:main"
voice-api = "voice_translation.api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_translation"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
